--- a/web-socket-spring-boot/src/main/resources/application.properties
+++ b/web-socket-spring-boot/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/chatdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/chatapp
 spring.datasource.username= postgres
 spring.datasource.password=Ghost314
 
